# rquote

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  template.py
.github/workflows/: deploy.yaml
crates/rquote-component/: Cargo.toml  README.md
crates/rquote-component/src/: async_load.rs  button.rs  error.rs  footer.rs  lib.rs  list.rs  loading.rs  nav_bar.rs  not_found.rs  pager.rs  search_bar.rs  switch.rs
crates/rquote-core/: Cargo.toml  README.md
crates/rquote-core/src/: animechan.rs  lib.rs
crates/rquote-core/src/animechan/: cached.rs  mod.rs
crates/rquote-core/src/wrapper/: client.rs  mod.rs
docs/: 404.html  index-198763543d78e4d6.js  index-198763543d78e4d6_bg.wasm  index-275487446b567fe9.js  index-275487446b567fe9_bg.wasm  index-4755bcf925d4955.js  index-4755bcf925d4955_bg.wasm  index-47936fbd50e5f6ca.js  index-47936fbd50e5f6ca_bg.wasm  index-49a9fd9bf1fea538.js  index-49a9fd9bf1fea538_bg.wasm  index-4a66ec5ca111d9.js  index-4a66ec5ca111d9_bg.wasm  index-52a2817afb72a15f.js  index-52a2817afb72a15f_bg.wasm  index-5856410a2073527b.js  index-5856410a2073527b_bg.wasm  index-594211e2f15933e2.js  index-594211e2f15933e2_bg.wasm  index-59685e79fe091575.js  index-59685e79fe091575_bg.wasm  index-5dfc9a991eacca80.js  index-5dfc9a991eacca80_bg.wasm  index-689160d1de2f7045.js  index-689160d1de2f7045_bg.wasm  index-a964a489283e1634.js  index-a964a489283e1634_bg.wasm  index-ab2e72d47c236e2f.js  index-ab2e72d47c236e2f_bg.wasm  index-c3ce97a625551d55.js  index-c3ce97a625551d55_bg.wasm  index-c768ea457a321efe.js  index-c768ea457a321efe_bg.wasm  index-d613f01ac86626a5.js  index-d613f01ac86626a5_bg.wasm  index-e9969cc2505725ed.js  index-e9969cc2505725ed_bg.wasm  index-f2a181f50d54b951.js  index-f2a181f50d54b951_bg.wasm  index.html  (+16 more)
src/: animechan.rs  context.rs  main.rs  route.rs  wrapper.rs
src/component/: async_list.rs  async_load.rs  error.rs  footer.rs  list.rs  loading.rs  mod.rs  nav_bar.rs  not_found.rs  pager.rs  quote.rs  search_bar.rs  switch.rs
src/custom/: mod.rs  quote.rs
src/gui/: controller.rs  mod.rs  quote.rs
src/route/: about.rs  anime.rs  anime_list.rs  character.rs  dev.rs  home.rs  lucky.rs  not_found.rs
templates/: index.html.mustache
