[package]
name = "rquote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
debug = false
lto = "fat"
codegen-units = 1

[workspace]
members = [
    "crates/rquote-component",
    "crates/rquote-core",
]

[dependencies]
yew = "0.19"
yew-router = "0.16"
urlencoding = "2.1"
pulldown-cmark = "0.9"
fuzzy-matcher = "0.3"
reqwest = "0.11"
wasm-bindgen = "0.2"
yew-hooks = "0.1"

[dependencies.rquote-component]
version = "*"
path = "crates/rquote-component"

[dependencies.rquote-core]
version = "*"
path = "crates/rquote-core"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "MediaQueryList",
    "Element",
    "HtmlCollection",
    "Document",
    "HtmlElement",
    "DomTokenList",
    "EventListener",
]
