[package]
name = "rquote-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
async-trait = "0.1.52"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "Event",
    "HtmlInputElement",
    "InputEvent",
    "EventTarget",
    "Window",
    "Location",
]