[package]
name = "rquote-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.cached]
features=["proc_macro", "async"]
version = "0.34.0"

[dependencies.reqwest]
version = "0.11.9"
features = ["json"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"