[package]
name = "rquote-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cached = { workspace=true }
gloo-net = { workspace=true }
serde= { workspace=true }

[dev-dependencies]
wasm-bindgen-test = { workspace=true }